--- a/package.json
+++ b/package.json
@@ -1,3 +1,22 @@
 {
-
+  "name": "gs-custom-blocks",
+  "version": "1.0.0",
+  "description": "## Introduction",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/numaan-gs/blocksdk.git"
+  },
+  "author": "Numaan",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/numaan-gs/blocksdk/issues"
+  },
+  "homepage": "https://github.com/numaan-gs/blocksdk#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
