--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/numaan-gs/blocksdk#readme",
   "dependencies": {
+    "@salesforce-ux/design-system": "^2.14.3",
+    "blocksdk": "^1.3.0",
     "express": "^4.17.1"
   },
   "devDependencies": {}
